--- a/index.html
+++ b/index.html
@@ -68,9 +68,35 @@
       </div>
       <div class="hidden p-4 rounded-lg bg-white shadow" id="configure" role="tabpanel" aria-labelledby="configure-tab">
         <h2 class="text-xl font-semibold mb-4">Configure</h2>
-        <div class="flex space-x-4">
+        <div class="flex space-x-4 mb-8">
           <button id="start-button" class="px-6 py-2 bg-green-500 text-white font-semibold rounded-md hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 shadow-sm">Start</button>
           <button id="stop-button" class="px-6 py-2 bg-red-500 text-white font-semibold rounded-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 shadow-sm">Stop</button>
+        </div>
+
+        <div>
+          <h3 class="text-lg font-medium text-gray-900 mb-3">Precursor Levels</h3>
+          <div class="space-y-3">
+            <div class="flex items-center space-x-3">
+              <div class="w-40 text-sm font-medium text-gray-700 p-2 border border-gray-200 rounded-md bg-gray-50 text-center">Precursor 1: TMA</div>
+              <div id="precursor-level-1-value" class="w-20 h-8 flex items-center justify-center text-sm font-semibold text-white rounded-md shadow-sm">
+                --%
+              </div>
+            </div>
+            <div class="flex items-center space-x-3">
+              <div class="w-40 text-sm font-medium text-gray-700 p-2 border border-gray-200 rounded-md bg-gray-50 text-center">Precursor 2: H2O</div>
+              <div id="precursor-level-2-value" class="w-20 h-8 flex items-center justify-center text-sm font-semibold text-white rounded-md shadow-sm">
+                --%
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="mt-6">
+          <div class="flex items-center space-x-3">
+            <div class="w-40 text-sm font-medium text-gray-700 p-2 border border-gray-200 rounded-md bg-gray-50 text-center">Chamber Pressure:</div>
+            <div id="chamber-pressure-value" class="w-28 h-8 flex items-center justify-center text-sm font-semibold text-gray-800 rounded-md shadow-sm border border-gray-300 bg-gray-100">
+              -.-- Torr
+            </div>
+          </div>
         </div>
       </div>
       <div class="hidden p-4 rounded-lg bg-white shadow" id="results" role="tabpanel" aria-labelledby="results-tab">
