--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
             </div>
           </div>
         </div>
+        <div class="mt-6">
+          <div class="flex items-center space-x-3">
+            <div class="w-40 text-sm font-medium text-gray-700 p-2 border border-gray-200 rounded-md bg-gray-50 text-center">Particle Counter:</div>
+            <div id="particle-count-value" class="w-20 h-8 flex items-center justify-center text-sm font-semibold text-gray-800 rounded-md shadow-sm border border-gray-300 bg-gray-100">
+              -.--
+            </div>
+            <button id="pulse-button" class="px-4 py-2 bg-indigo-500 text-white font-semibold rounded-md hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 shadow-sm">Pulse</button>
+            <button id="purge-button" class="px-4 py-2 bg-red-500 text-white font-semibold rounded-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 shadow-sm">Purge</button>
+          </div>
       </div>
       <div class="hidden p-4 rounded-lg bg-white shadow" id="results" role="tabpanel" aria-labelledby="results-tab">
         <h2 class="text-xl font-semibold mb-4">Results</h2>
