--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script type="module" src="./temperature_controls.js"></script>
   <script type="module" src="./flow_rate_controls.js"></script>
   <script type="module" src="./cycles_controls.js"></script>
+  <script type="module" src="./results_controls.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 font-sans">
@@ -72,7 +73,7 @@
       </div>
       <div class="hidden p-4 rounded-lg bg-white shadow" id="configure" role="tabpanel" aria-labelledby="configure-tab">
         <h2 class="text-xl font-semibold mb-4">Configure</h2>
-        
+
         <div class="flex space-x-8">
           <!-- Left side: All controls -->
           <div class="flex-1">
@@ -161,29 +162,19 @@
             <div id="thickness-chart" style="width: 100%; height: 400px;"></div>
           </div>
         </div>
-        <div class="mt-6">
-          <div class="flex items-center space-x-3">
-            <div class="w-40 text-sm font-medium text-gray-700 p-2 border border-gray-200 rounded-md bg-gray-50 text-center">Particle Counter:</div>
-            <div id="particle-count-value" class="w-20 h-8 flex items-center justify-center text-sm font-semibold text-gray-800 rounded-md shadow-sm border border-gray-300 bg-gray-100">
-              -.--
-            </div>
-            <button id="pulse-button" class="px-4 py-2 bg-indigo-500 text-white font-semibold rounded-md hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 shadow-sm">Pulse</button>
-            <button id="purge-button" class="px-4 py-2 bg-red-500 text-white font-semibold rounded-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 shadow-sm">Purge</button>
-          </div>
+    </div>
+    <div class="hidden p-4 rounded-lg bg-white shadow" id="results" role="tabpanel" aria-labelledby="results-tab">
+      <h2 class="text-xl font-semibold mb-4">Results</h2>
+      <div class="mb-6">
+        <select id="data-type" class="block mx-auto rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+          <option value="pressure">Pressure</option>
+          <option value="temperature">Temperature</option>
+          <option value="thickness">Thickness</option>
+          <option value="yield">Yield</option>
+        </select>
       </div>
-      <div class="hidden p-4 rounded-lg bg-white shadow" id="results" role="tabpanel" aria-labelledby="results-tab">
-        <h2 class="text-xl font-semibold mb-4">Results</h2>
-        <div class="mb-6">
-          <select id="data-type" class="block mx-auto rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
-            <option value="pressure">Pressure</option>
-            <option value="temperature">Temperature</option>
-            <option value="thickness">Thickness</option>
-            <option value="yield">Yield</option>
-          </select>
-        </div>
-        <div id="chart-container" class="w-full">
-          <div id="stock-chart" style="height: 400px;"></div>
-        </div>
+      <div id="chart-container" class="w-full">
+        <div id="stock-chart" style="height: 400px;"></div>
       </div>
     </div>
   </div>
