add chamber pressure and precursor levels

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                 </div>
                 <div class="temperature-controls flex space-x-2">
                   <button id="heat-up-button" class="font-semibold py-2 px-4 rounded-md transition-colors duration-150 ease-in-out">Heat up</button>
+                  <button id="cool-down-button" class="font-semibold py-2 px-4 rounded-md transition-colors duration-150 ease-in-out">Cool down</button>
                 </div>
               </div>
             </div>
